--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/file-saver": "^2.0.5",
     "@types/jest": "^29.5.0",
+    "@types/jquery": "^3.5.18",
     "@types/lodash": "^4.14.192",
     "@types/node": "^18.15.11",
     "@types/papaparse": "^5.3.1",
@@ -36,6 +37,7 @@
     "@types/react-dom": "^18.0.6",
     "@types/react-router-dom": "^5.3.3",
     "@types/sortablejs": "^1.13.0",
+    "@types/turndown": "^5.0.1",
     "@typescript-eslint/eslint-plugin": "^5.57.0",
     "@typescript-eslint/parser": "^5.57.1",
     "babel-eslint": "^10.0.3",
@@ -91,6 +93,7 @@
     "file-saver": "^2.0.5",
     "i18n-iso-countries": "^7.6.0",
     "i18next": "^23.2.11",
+    "jquery": "^3.6.3",
     "libphonenumber-js": "^1.10.41",
     "lodash": "^4.17.21",
     "pdfjs-dist": "3.6",
@@ -102,7 +105,10 @@
     "react-i18next": "^13.0.2",
     "react-image-crop": "^10.1.5",
     "react-router-dom": "^6.3.0",
+    "summernote": "^0.8.20",
     "terser-webpack-plugin": "^5.3.9",
+    "turndown": "^7.1.2",
+    "turndown-plugin-gfm": "^1.0.2",
     "use-query-params": "^2.2.1"
   },
   "browser": {
