--- a/package.json
+++ b/package.json
@@ -6,9 +6,15 @@
   "main": "main.js",
   "scripts": {
     "start": "webpack serve --mode development",
+    "start-webshops": "webpack serve --mode development --env disable='dashboard*,backend' enable='webshop*'",
+    "start-dashboards": "webpack serve --mode development --env disable='webshop*,backend' enable='dashboard*'",
     "watch": "webpack --watch --mode development",
     "build": "webpack --mode production",
-    "build-dev": "webpack --mode development"
+    "build-webshops": "webpack --mode production --env disable='dashboard*,backend' enable='webshop*'",
+    "build-dashboards": "webpack --mode production --env disable='webshop*,backend' enable='dashboard*'",
+    "build-dev": "webpack --mode development",
+    "build-webshops-dev": "webpack --mode development --env disable='dashboard*,backend' enable='webshop*'",
+    "build-dashboards-dev": "webpack --mode development --env disable='webshop*,backend' enable='dashboard*'"
   },
   "author": "",
   "license": "ISC",
