products change history update

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "main.js",
   "scripts": {
     "start": "webpack serve --mode development",
+    "start-dusk": "webpack serve --mode development --env enable='webshop.general,dashboard*'",
     "start-webshops": "webpack serve --mode development --env disable='dashboard*,backend' enable='webshop*'",
     "start-dashboards": "webpack serve --mode development --env disable='webshop*,backend' enable='dashboard*'",
     "watch": "webpack --watch --mode development",
@@ -28,6 +29,7 @@
     "@babel/preset-typescript": "^7.26.0",
     "@mdi/react": "^1.5.0",
     "@svgr/webpack": "^8.0.1",
+    "@types/diff": "^6.0.0",
     "@types/file-saver": "^2.0.7",
     "@types/jquery": "^3.5.18",
     "@types/lodash": "^4.14.192",
@@ -65,7 +67,7 @@
     "eslint-webpack-plugin": "^4.2.0",
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.0",
-    "prettier": "^3.3.3",
+    "prettier": "3.3.3",
     "resolve-url-loader": "^5.0.0",
     "sass": "^1.77",
     "sass-loader": "^16.0.2",
@@ -91,6 +93,8 @@
     "chart.js": "^4.4.1",
     "clean-webpack-plugin": "^4.0.0",
     "date-fns": "^4.1.0",
+    "diff": "^7.0.0",
+    "dompurify": "^3.2.1",
     "easyqrcodejs": "^4.4.13",
     "file-saver": "^2.0.5",
     "i18n-iso-countries": "^7.6.0",
