--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "@mdi/font": "^7.2.96",
     "@mdi/js": "^7.1.96",
     "@react-google-maps/api": "^2.20.3",
+    "@uiw/react-color": "^2.4.1",
     "aws-rum-web": "^1.19.0",
     "chart.js": "^4.4.1",
     "clean-webpack-plugin": "^4.0.0",
