--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "main.js",
   "scripts": {
     "start": "webpack serve --mode development",
+    "start-all": "webpack serve --mode development --env enable='webshop*,dashboard*,backend'",
     "start-dusk": "webpack serve --mode development --env enable='webshop.general,dashboard*'",
     "start-webshops": "webpack serve --mode development --env disable='dashboard*,backend' enable='webshop*'",
     "start-dashboards": "webpack serve --mode development --env disable='webshop*,backend' enable='dashboard*'",
