--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/qrcode": "^1.4.1",
     "@types/react": "^18.1.0",
     "@types/react-dom": "^18.0.6",
+    "@types/react-slider": "^1.3.6",
     "@types/turndown": "^5.0.1",
     "@typescript-eslint/eslint-plugin": "^8.18",
     "@typescript-eslint/parser": "^8.8",
@@ -116,7 +117,9 @@
     "react-gtm-module": "^2.0.11",
     "react-i18next": "^15.0.1",
     "react-image-crop": "^11.0.6",
+    "react-range-slider-input": "^3.2.1",
     "react-router-dom": "^6.27.0",
+    "react-slider": "^2.0.6",
     "summernote": "^0.9.1",
     "terser-webpack-plugin": "^5.3.9",
     "turndown": "^7.1.2",
