--- a/package.json
+++ b/package.json
@@ -118,7 +118,7 @@
     "react-i18next": "^15.0.1",
     "react-image-crop": "^11.0.6",
     "react-range-slider-input": "^3.2.1",
-    "react-router-dom": "^6.27.0",
+    "react-router": "^7.5.2",
     "react-slider": "^2.0.6",
     "summernote": "^0.9.1",
     "terser-webpack-plugin": "^5.3.9",
