increase cms pages content font size on webshops

--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "start-dashboards": "webpack serve --mode development --env disable='webshop*,backend' enable='dashboard*'",
     "watch": "webpack --watch --mode development",
     "build": "webpack --mode production",
+    "build-all": "webpack --mode production --env enable='webshop*,dashboard*,backend'",
     "build-webshops": "webpack --mode production --env disable='dashboard*,backend' enable='webshop*'",
     "build-dashboards": "webpack --mode production --env disable='webshop*,backend' enable='dashboard*'",
     "build-dev": "webpack --mode development",
+    "build-dev-all": "webpack --mode development --env enable='webshop*,dashboard*,backend'",
     "build-webshops-dev": "webpack --mode development --env disable='dashboard*,backend' enable='webshop*'",
     "build-dashboards-dev": "webpack --mode development --env disable='webshop*,backend' enable='dashboard*'",
     "translations-prepare": "node translations/prepare.mjs",
