add permissions to workflows

--- a/.github/workflows/auto_pr_on_master_push.yml
+++ b/.github/workflows/auto_pr_on_master_push.yml
@@ -10,6 +10,9 @@ on:
 jobs:
   create_pr:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write
     steps:
       - name: Checkout master branch
         uses: actions/checkout@v4
